--- a/head.html
+++ b/head.html
@@ -2,3 +2,5 @@
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <link rel="stylesheet" href="/styles/styles.css"/>
+<script src="/scripts/all.min.gz.js" type="module"></script>
+<link rel="stylesheet" href="/styles/all.min.gz.css"/>
