--- a/head.html
+++ b/head.html
@@ -1,6 +1,146 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
-<link rel="stylesheet" href="/styles/styles.css"/>
+<!-- <link rel="stylesheet" href="/styles/styles.css"/> -->
 <script src="/scripts/all.min.gz.js" type="module"></script>
 <link rel="stylesheet" href="/styles/all.min.gz.css"/>
+<style data-cssvarsponyfill="true">
+    :root {
+--primaryColor: #00a45f;
+--primaryFadedColor: rgba(230, 0, 0, 0.75);
+--primaryDarkenedColor: #900;
+--secondaryColor: #323232;
+
+--primaryTextColor: #323232;
+
+--linkTextColor: #323232;
+--linkHoverColor: #00A45F;
+
+--siteBgColor: #ffffff;
+
+--headerBgColor: #ffffff;
+--headerTextColor: #323232;
+
+--footerBgColor: #323232;
+--footerTextColor: #ffffff;
+
+--grayscale0Color: #F0F2F5;
+--grayscale1Color: rgba(102,102,102,.5);
+--grayscale2Color: rgba(102,102,102,.8);
+--grayscale3Color: #323232;
+--grayscale4Color: #E1E5E9;
+--grayscale5Color: #B5B5B5;
+--grayscale6Color: #5A6376;
+--grayscale7Color: #FAFAFA;
+--grayscale8Color: #FBFBFB;
+--grayscale9Color: #8C96A8;
+--grayscale10Color: #F0F2F5;
+--grayscale11Color: #3E3C3C;
+
+--primaryButtonHoverColor: #2D8B5D;
+
+--primaryHeadlineFont: 'Euclid-Circular-A-Regular';
+--secondaryHeadlineFont: 'Euclid-Circular-A-Light';
+--bodyFont: 'Euclid-Circular-A-Light';
+}
+
+</style>
+<!-- <link data-cssvarsponyfill="true" class="Webpack-css" rel="stylesheet" href="https://content.vodafone.co.nz/resource/00000186-2c64-d16f-a5ee-ae6e637d0000/styleguide/All.min.f695f7d4a5e7981d3760b0eb5dbdfc89.gz.css">
+
+    
+
+<style>ul,
+ol {
+margin: 0;
+padding: 0;
+}
+
+ul {
+margin: 10px 0 10px 30px;
+}
+
+img {
+display: block;
+height: auto;
+max-width: 100%;
+}
+
+.PromoImageOnly .Link img {
+margin: auto;
+}
+
+.SectionPage-headingWrapper .PromoImageOnly .Image {
+width: 100%;
+}
+
+.Accordion {
+padding-top: 20px;
+}
+.vf_number_selector_tool ul {
+margin: 0px;
+}
+
+
+.alert{background-color:#4a4d4e;color:#fff;border:1px solid transparent;border-radius:10px;margin-bottom:20px;box-shadow:0 2px 8px rgba(0,0,0,.15)}.alert--warning{border-color:#fecb00}.alert--arrow{margin-bottom:12px}.caption{display:table}.icon{fill:none;stroke:currentColor;stroke-width:.4em;vertical-align:middle;display:inline-block}.grid__item,.icon{display:inline-block}.icon--small{width:28px;height:28px}.alert--warning .alert__media{background-color:#fecb00}.alert--arrow .alert__media::after,.alert--arrow .alert__media::before{border:8px solid transparent;border-top-color:#fecb00;display:block;height:0;width:0;-ms-transform:rotate(0);transform:rotate(0);left:50%;margin-left:-8px;content:'';position:absolute;top:100%}.caption__media,.caption__text{display:table-cell}.caption__media--top{vertical-align:top}.alert__icon{color:#333}@media only screen and (max-width:970px){.icon--small{width:24px;height:24px}}.caption__text--top{vertical-align:top}.alert__media{border-right:none;padding:11px 15px;position:relative;border-bottom-left-radius:9px;border-top-left-radius:9px}.alert__text{padding:12px 20px}
+.AccordionItem-body a:hover{text-decoration:none}.AccordionItem-body a{text-decoration:underline}a.CtaLink{text-decoration:none}
+.PromoB-title{text-align:left}.PromoB-media img{height:400px;object-fit:cover}
+
+.PromoB-media .PromoB-mobileImage img {
+height: auto;
+}
+
+.PromoB-media img {
+height: auto;
+}
+
+
+.CtaLink {
+background-color: var(--grayscale6Color);
+}
+.CtaLink:hover {
+background-color: var(--grayscale3Color);
+}
+
+.RichTextBody a.CtaLink {
+background-color: var(--grayscale6Color);
+}
+.RichTextBody a.CtaLink:hover {
+background-color: var(--grayscale3Color);
+}
+
+.RichTextModule {
+overflow-x: auto;	
+}
+
+.Accordion-title {
+font-size: 4rem
+}
+
+.AccordionItem-header {
+padding-bottom: 35px;
+}
+
+.Tabs-tab
+{ position: relative;
+z-index: 1;
+}
+.IconPromo-icon 
+{ padding: 0px !important;}
+
+.IconPromo-title
+{ text-align: center;}
+
+ol {
+margin-left: 20px !important;}
+
+.Container-title h2 {
+    margin:0px;
+}
+
+.CtaLink {margin-right:10px !important;}</style>
+<style>.async-hide { opacity: 0 !important}</style>
+<style>.Page-header-search-submit:hover {
+background: #00694a !important;
+}</style>
+ <link rel="apple-touch-icon"sizes="180x180"href="/apple-touch-icon.png"><link rel="icon"type="image/png"href="/favicon-228x228.png"><link rel="icon"type="image/png"href="/favicon-76x76.png"><link rel="icon"type="image/png"href="/favicon-32x32.png"><link rel="icon"type="image/png"href="/favicon-16x16.png">
+    -->
