--- a/head.html
+++ b/head.html
@@ -8,6 +8,123 @@
 <!-- <link rel="stylesheet" href="/styles/styles.css"/> -->
 <script src="/scripts/all.min.gz.js" type="module"></script>
 <link rel="stylesheet" type="text/css" href="/styles/all.min.gz.css" />
+<link rel="stylesheet" href="/styles/nav.css"/>
+<style>ul,
+ol {
+    margin: 0;
+    padding: 0;
+}
+
+ 
+
+ul {
+    margin: 10px 0 10px 30px;
+}
+
+ 
+
+img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
+ 
+
+.PromoImageOnly .Link img {
+    margin: auto;
+}
+
+ 
+
+.SectionPage-headingWrapper .PromoImageOnly .Image {
+  width: 100%;
+}
+
+ 
+
+.Accordion {
+padding-top: 20px;
+}
+.vf_number_selector_tool ul {
+    margin: 0px;
+}
+
+ 
+
+ 
+
+    .alert{background-color:#4a4d4e;color:#fff;border:1px solid transparent;border-radius:10px;margin-bottom:20px;box-shadow:0 2px 8px rgba(0,0,0,.15)}.alert--warning{border-color:#fecb00}.alert--arrow{margin-bottom:12px}.caption{display:table}.icon{fill:none;stroke:currentColor;stroke-width:.4em;vertical-align:middle;display:inline-block}.grid__item,.icon{display:inline-block}.icon--small{width:28px;height:28px}.alert--warning .alert__media{background-color:#fecb00}.alert--arrow .alert__media::after,.alert--arrow .alert__media::before{border:8px solid transparent;border-top-color:#fecb00;display:block;height:0;width:0;-ms-transform:rotate(0);transform:rotate(0);left:50%;margin-left:-8px;content:'';position:absolute;top:100%}.caption__media,.caption__text{display:table-cell}.caption__media--top{vertical-align:top}.alert__icon{color:#333}@media only screen and (max-width:970px){.icon--small{width:24px;height:24px}}.caption__text--top{vertical-align:top}.alert__media{border-right:none;padding:11px 15px;position:relative;border-bottom-left-radius:9px;border-top-left-radius:9px}.alert__text{padding:12px 20px}
+.AccordionItem-body a:hover{text-decoration:none}.AccordionItem-body a{text-decoration:underline}a.CtaLink{text-decoration:none}
+.PromoB-title{text-align:left}.PromoB-media img{height:400px;object-fit:cover}
+
+ 
+
+    .PromoB-media .PromoB-mobileImage img {
+    height: auto;
+}
+
+ 
+
+    .PromoB-media img {
+    height: auto;
+}
+
+
+ 
+
+.CtaLink {
+background-color: var(--grayscale6Color);
+}
+.CtaLink:hover {
+    background-color: var(--grayscale3Color);
+}
+
+ 
+
+.RichTextBody a.CtaLink {
+background-color: var(--grayscale6Color);
+}
+.RichTextBody a.CtaLink:hover {
+    background-color: var(--grayscale3Color);
+}
+
+.RichTextModule {
+    overflow-x: auto;	
+	}
+
+	.Accordion-title {
+    font-size: 4rem
+}
+
+.AccordionItem-header {
+    padding-bottom: 35px;
+}
+
+.Tabs-tab
+{ position: relative;
+z-index: 1;
+}
+.IconPromo-icon 
+{ padding: 0px !important;}
+
+
+.IconPromo-title
+{ text-align: center;}
+ol {
+    margin-left: 20px !important;}
+
+ 
+
+  .Container-title h2 {
+        margin:0px;
+    }
+
+.CtaLink {margin-right:10px !important;}</style>
+<style>.async-hide { opacity: 0 !important}</style>
+<style>.Page-header-search-submit:hover {
+    background: #00694a !important;
+}</style>
 
 <style data-cssvarsponyfill="true">
     :root {
