add css files & new js files

--- a/head.html
+++ b/head.html
@@ -6,9 +6,9 @@
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
 <!-- <link rel="stylesheet" href="/styles/styles.css"/> -->
-<script src="/scripts/all.min.gz.js" type="module"></script>
+<!-- <script src="/scripts/all.min.gz.js" type="module"></script> -->
+<script src="/scripts/mainScript.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="/styles/all.min.gz.css" />
-<link rel="stylesheet" href="/styles/nav.css"/>
 <style>ul,
 ol {
     margin: 0;
